--- a/main.tex
+++ b/main.tex
@@ -1006,14 +1006,18 @@ All the experiments in this section are conducted with python 3.8.0.
 In particular we use the agglomerative clustering algorithm, decision trees, and the MinMaxScaler from the sklearn 0.22.1 library.
 
 \begin{figure}
-  \begin{subfigure}[t]{3cm}
+\begin{subfigure}[t]{\textwidth}
+   \includegraphics[width=0.45\textwidth]{./media/image10.png}
+   \caption{Job-IO-Duration}
+   \label{fig:datasets_clustering_results:io_duration}
+  \end{subfigure}
 
-  \subfloat[Job-IO-Duration\label{fig:datasets_clustering_results:io_duration}]{
-    \includegraphics[width=0.45\textwidth]{./media/image10.png}
-  }
-  \subfloat[Job-IO-Metric\label{fig:datasets_clustering_results:io_metric}]{
-    \includegraphics[width=0.45\textwidth]{./media/image12.png}
-  }
+\begin{subfigure}[t]{\textwidth}
+   \includegraphics[width=0.45\textwidth]{./media/image12.png}
+   \caption{Job-IO-Metric}
+   \label{fig:datasets_clustering_results:io_metric}
+  \end{subfigure}
+
   \caption{The Top 20 largest clusters.}
   \label{fig:datasets_clustering_results}
 \end{figure}
